Add core and infra grouping modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       retries: 10
 
   ewm-service:
-    build: main-service/
+    build: core/main-service/
     container_name: main-server
     ports:
       - "8080:8080"
