--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,9 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>main-service</module>
         <module>stat</module>
+        <module>infra</module>
+        <module>core</module>
     </modules>
 
     <properties>
