--- a/core/main-service/pom.xml
+++ b/core/main-service/pom.xml
@@ -45,6 +45,12 @@
             <classifier>jakarta</classifier>
         </dependency>
 
+        <!--spring cloud-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
