--- a/stat/stat-server/pom.xml
+++ b/stat/stat-server/pom.xml
@@ -40,6 +40,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!--spring cloud-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
