--- a/core/main-service/pom.xml
+++ b/core/main-service/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>stat-client</artifactId>
+            <artifactId>stats-client</artifactId>
             <version>${project.version}</version>
         </dependency>
 
