--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -9,11 +9,11 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>stat</artifactId>
+    <artifactId>stats</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>stat-client</module>
-        <module>stat-dto</module>
-        <module>stat-server</module>
+        <module>stats-client</module>
+        <module>stats-dto</module>
+        <module>stats-server</module>
     </modules>
 </project>
