--- a/infra/pom.xml
+++ b/infra/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>discovery-server</module>
+        <module>config-server</module>
     </modules>
 
 </project>
