--- a/stats/stats-server/src/main/resources/application.yaml
+++ b/stats/stats-server/src/main/resources/application.yaml
@@ -1,26 +1,17 @@
-server:
-  port: 0
-
 spring:
   application:
     name: stats-server
-  datasource:
-    url: jdbc:postgresql://localhost:6666/StatServDB
-    username: dbuser
-    password: 12345
-  sql:
-    init:
-      mode: always
-  output:
-    ansi:
-      enabled: ALWAYS
-  jpa:
-    hibernate:
-      ddl-auto: none
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
+  config:
+    import: "configserver:"
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        serviceId: config-server
+      fail-fast: true
+      retry:
+        useRandomPolicy: true
+        max-interval: 6000
 
 eureka:
   client:
