Add docker files to every module and change docker-compose

--- a/infra/config-server/src/main/resources/config/core/main-service/application.yaml
+++ b/infra/config-server/src/main/resources/config/core/main-service/application.yaml
@@ -6,9 +6,9 @@ stats-server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:3333/MainServDB
-    username: dbuser
-    password: 12345
+    url: jdbc:postgresql://ewm-db:5432/ewm-main
+    username: root
+    password: root
   sql:
     init:
       mode: always
