--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,6 +13,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>main-service</module>
+        <module>common</module>
+        <module>user</module>
     </modules>
 
 </project>
