Make separate user microservice

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,7 +14,7 @@
     <modules>
         <module>main-service</module>
         <module>common</module>
-        <module>user</module>
+        <module>user-service</module>
     </modules>
 
 </project>
