--- a/core/user-service/pom.xml
+++ b/core/user-service/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>user</artifactId>
+    <artifactId>user-service</artifactId>
 
 
     <dependencies>
