--- a/infra/config-server/src/main/resources/config/core/main-service/application-test.yaml
+++ b/infra/config-server/src/main/resources/config/core/main-service/application-test.yaml
@@ -19,7 +19,7 @@ logging:
       springframework:
         web:
           client:
-            RestTemplate: DEBUG
+            RestTemplate: INFO
         orm:
           jpa: INFO
       hibernate:
