--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     depends_on:
       config-server:
         condition: service_healthy
-      ewm-service:
+      user-service:
         condition: service_healthy
     networks:
       - ewm-net
@@ -83,20 +83,20 @@ services:
       interval: 10s
       retries: 15
 
-  ewm-service:
-    build: core/main-service
-    container_name: ewm-main-service
+  user-service:
+    build: core/user-service
+    container_name: ewm-user-service
     depends_on:
       ewm-db:
         condition: service_healthy
       config-server:
         condition: service_healthy
-      stats-server:
-        condition: service_healthy
+#      stats-server:
+#        condition: service_healthy
     networks:
       - ewm-net
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-main
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/user_db
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:8761/eureka/
@@ -109,15 +109,17 @@ services:
 
   ewm-db:
     image: postgres:16.1
-    container_name: postgres-ewm-main-db
+    container_name: postgres-ewm-db
     networks:
       - ewm-net
     environment:
       - POSTGRES_PASSWORD=root
       - POSTGRES_USER=root
-      - POSTGRES_DB=ewm-main
+      - POSTGRES_MULTIPLE_DATABASES=user_db
+    volumes:
+      - ./docker-init:/docker-entrypoint-initdb.d
     healthcheck:
-      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      test: pg_isready -q -d postgres -U $$POSTGRES_USER
       timeout: 5s
       interval: 10s
       retries: 15
