Make separate location microservice

--- a/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
+++ b/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
@@ -29,6 +29,10 @@ spring:
           uri: lb://user-service
           predicates:
             - Path=/admin/users/**
+        - id: location_service_route
+          uri: lb://location-service
+          predicates:
+            - Path=/admin/locations/**,/locations/**
         - id: main_service_route
           uri: lb://main-service
           predicates:
