--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,15 +107,37 @@ services:
       interval: 25s
       retries: 10
 
+  location-service:
+    build: core/location-service
+    container_name: ewm-location-service
+    depends_on:
+      ewm-db:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
+    networks:
+      - ewm-net
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/location_db
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:8761/eureka/
+      - SERVER_PORT=8082
+    healthcheck:
+      test: "curl --fail --silent localhost:8082/actuator/health | grep UP || exit 1"
+      timeout: 5s
+      interval: 25s
+      retries: 10
+
   ewm-db:
     image: postgres:16.1
     container_name: postgres-ewm-db
     networks:
       - ewm-net
     environment:
-      - POSTGRES_PASSWORD=root
-      - POSTGRES_USER=root
-      - POSTGRES_MULTIPLE_DATABASES=user_db
+      POSTGRES_MULTIPLE_DATABASES: user_db, location_db
+      POSTGRES_PASSWORD: root
+      POSTGRES_USER: root
     volumes:
       - ./docker-init:/docker-entrypoint-initdb.d
     healthcheck:
