--- a/infra/config-server/src/main/resources/config/core/location-service/application-test.yaml
+++ b/infra/config-server/src/main/resources/config/core/location-service/application-test.yaml
@@ -1,14 +1,16 @@
 spring:
   datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:MainServDB;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+    url: jdbc:h2:mem:LocationDB;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
   h2:
     console:
       enabled: true
+  sql:
+    init:
+      schema-locations: classpath:schema-h2.sql
   mvc:
     log-request-details: true
 
-#debug: true
 logging:
   level:
     root: INFO
@@ -23,7 +25,3 @@ logging:
         orm:
           jdbc:
             bind: trace
-#      apache:
-#        http: DEBUG
-#    httpclient:
-#      wire: DEBUG
