--- a/core/participationrequest-service/pom.xml
+++ b/core/participationrequest-service/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>location-service</artifactId>
+    <artifactId>participationrequest-service</artifactId>
 
     <dependencies>
         <dependency>
