--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,8 +91,6 @@ services:
         condition: service_healthy
       config-server:
         condition: service_healthy
-#      stats-server:
-#        condition: service_healthy
     networks:
       - ewm-net
     environment:
@@ -129,13 +127,59 @@ services:
       interval: 25s
       retries: 10
 
+  participationrequest-service:
+    build: core/participationrequest-service
+    container_name: ewm-participationrequest-service
+    depends_on:
+      ewm-db:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
+    networks:
+      - ewm-net
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/participationrequest_db
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:8761/eureka/
+      - SERVER_PORT=8083
+    healthcheck:
+      test: "curl --fail --silent localhost:8083/actuator/health | grep UP || exit 1"
+      timeout: 5s
+      interval: 25s
+      retries: 10
+
+  event-service:
+    build: core/event-service
+    container_name: ewm-event-service
+    depends_on:
+      ewm-db:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
+      stats-server:
+        condition: service_healthy
+    networks:
+      - ewm-net
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/participationrequest_db
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:8761/eureka/
+      - SERVER_PORT=8084
+    healthcheck:
+      test: "curl --fail --silent localhost:8084/actuator/health | grep UP || exit 1"
+      timeout: 5s
+      interval: 25s
+      retries: 10
+
   ewm-db:
     image: postgres:16.1
     container_name: postgres-ewm-db
     networks:
       - ewm-net
     environment:
-      POSTGRES_MULTIPLE_DATABASES: user_db, location_db
+      POSTGRES_MULTIPLE_DATABASES: user_db, location_db, participationrequest_db, event_db
       POSTGRES_PASSWORD: root
       POSTGRES_USER: root
     volumes:
