--- a/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
+++ b/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
@@ -33,8 +33,12 @@ spring:
           uri: lb://location-service
           predicates:
             - Path=/admin/locations/**,/locations/**
-        - id: main_service_route
-          uri: lb://main-service
+        - id: participationrequest_service_route
+          uri: lb://participationrequest-service
+          predicates:
+            - Path=/admin/requests/**,/users/{userId}/requests/**
+        - id: event_service_route
+          uri: lb://event-service
           predicates:
             - Path=/**
           filters:
