--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -16,5 +16,6 @@
         <module>stats-dto</module>
         <module>serialization</module>
         <module>collector</module>
+        <module>aggregator</module>
     </modules>
 </project>
