--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,6 +141,8 @@ services:
   stats-collector:
     build: stats/collector
     container_name: ewm-stats-collector
+    ports:
+      - 9000:9000
     depends_on:
       config-server:
         condition: service_healthy
@@ -151,8 +153,30 @@ services:
     environment:
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:8761/eureka/
       - SERVER_PORT=8085
+      - GRPC_SERVER_PORT=9000
+      - COLLECTOR_KAFKA_BOOTSTRAP_SERVERS=kafka:29092
     healthcheck:
       test: "curl --fail --silent localhost:8085/actuator/health | grep UP || exit 1"
+      timeout: 5s
+      interval: 25s
+      retries: 10
+
+  stats-aggregator:
+    build: stats/aggregator
+    container_name: ewm-stats-aggregator
+    depends_on:
+      config-server:
+        condition: service_healthy
+      kafka:
+        condition: service_started
+    networks:
+      - ewm-net
+    environment:
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:8761/eureka/
+      - SERVER_PORT=8086
+      - AGGREGATOR_KAFKA_BOOTSTRAP_SERVERS=kafka:29092
+    healthcheck:
+      test: "curl --fail --silent localhost:8086/actuator/health | grep UP || exit 1"
       timeout: 5s
       interval: 25s
       retries: 10
