--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -181,13 +181,38 @@ services:
       interval: 25s
       retries: 10
 
+  stats-analyzer:
+    build: stats/analyzer
+    container_name: ewm-stats-analyzer
+    ports:
+      - 9090:9090
+    depends_on:
+      config-server:
+        condition: service_healthy
+      kafka:
+        condition: service_started
+      ewm-db:
+        condition: service_healthy
+    networks:
+      - ewm-net
+    environment:
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:8761/eureka/
+      - SERVER_PORT=8087
+      - GRPC_SERVER_PORT=9090
+      - ANALYZER_KAFKA_BOOTSTRAP_SERVERS=kafka:29092
+    healthcheck:
+      test: "curl --fail --silent localhost:8087/actuator/health | grep UP || exit 1"
+      timeout: 5s
+      interval: 25s
+      retries: 10
+
   ewm-db:
     image: postgres:16.1
     container_name: postgres-ewm-db
     networks:
       - ewm-net
     environment:
-      POSTGRES_MULTIPLE_DATABASES: user_db, location_db, participationrequest_db, event_db
+      POSTGRES_MULTIPLE_DATABASES: user_db, location_db, participationrequest_db, event_db, stats_db
       POSTGRES_PASSWORD: root
       POSTGRES_USER: root
     volumes:
