--- a/infra/config-server/src/main/resources/config/stats/analyzer/application.yaml
+++ b/infra/config-server/src/main/resources/config/stats/analyzer/application.yaml
@@ -1,8 +1,15 @@
+server:
+  port: 0
+
+grpc:
+  server:
+    port: 0
+
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:3333/AnalyzerDB
-    username: dbuser
-    password: 12345
+    url: jdbc:postgresql://ewm-db:5432/stats_db
+    username: root
+    password: root
   sql:
     init:
       mode: always
@@ -17,31 +24,11 @@ spring:
       hibernate:
         format_sql: true
 
-logging:
-  level:
-    root: INFO
-    org:
-      hibernate:
-        orm:
-          jdbc:
-            bind: TRACE
-      springframework:
-        orm:
-          jpa: INFO
-
 analyzer:
   kafka:
     bootstrap-servers: localhost:9092
-    hubs-consumer-group-id: analyzer.hubs
-    snapshots-consumer-group-id: analyzer.snapshots
+    user-actions-consumer-group-id: analyzer.user.actions
+    events-similarity-consumer-group-id: analyzer.events.similarity
   topic:
-    hub-events-topic: telemetry.hubs.v1
-    sensor-snapshots-topic: telemetry.snapshots.v1
-
-grpc:
-  client:
-    hub-router:
-      address: 'static://localhost:59090'
-      enableKeepAlive: true
-      keepAliveWithoutCalls: true
-      negotiationType: plaintext
+    user-actions-topic: stats.user-actions.v1
+    events-similarity-topic: stats.events-similarity.v1
