--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -17,5 +17,6 @@
         <module>serialization</module>
         <module>collector</module>
         <module>aggregator</module>
+        <module>analyzer</module>
     </modules>
 </project>
