--- a/infra/config-server/src/main/resources/config/stats/analyzer/application-test.yaml
+++ b/infra/config-server/src/main/resources/config/stats/analyzer/application-test.yaml
@@ -1,3 +1,6 @@
+server:
+  port: 4444
+
 spring:
   datasource:
     driverClassName: org.h2.Driver
@@ -13,7 +16,7 @@ logging:
     root: INFO
     org:
       apache:
-        kafka: DEBUG
+        kafka: INFO
       hibernate:
         orm:
           jdbc:
