Change stats/stats-client for grpc collector and analyzer clients

--- a/infra/config-server/src/main/resources/config/core/participationrequest-service/application.yaml
+++ b/infra/config-server/src/main/resources/config/core/participationrequest-service/application.yaml
@@ -19,3 +19,11 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+grpc:
+  client:
+    collector: # <- должно соответствовать значению в @GrpcClient
+      address: 'discovery:///collector' # адрес gRPC-сервиса
+      enableKeepAlive: true
+      keepAliveWithoutCalls: true
+      negotiationType: plaintext
