--- a/infra/config-server/src/main/resources/config/core/event-service/application.yaml
+++ b/infra/config-server/src/main/resources/config/core/event-service/application.yaml
@@ -22,3 +22,16 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+grpc:
+  client:
+    collector: # <- должно соответствовать значению в @GrpcClient
+      address: 'discovery:///collector' # адрес gRPC-сервиса
+      enableKeepAlive: true
+      keepAliveWithoutCalls: true
+      negotiationType: plaintext
+    analyzer: # <- должно соответствовать значению в @GrpcClient
+      address: 'discovery:///analyzer' # адрес gRPC-сервиса
+      enableKeepAlive: true
+      keepAliveWithoutCalls: true
+      negotiationType: plaintext
